added vertical checking

--- a/code/kivy/editor.kv
+++ b/code/kivy/editor.kv
@@ -17,7 +17,7 @@
         Image:
             id: imgbutton
             size_hint_x: 0.7
-            # source: root.manager.img
+            source: root.manager.img
         
         BoxLayout:
             size_hint_x: 0.3
